bootstrap scss 변수값 변경 및 style.css 수정

--- a/assets/style/custom.scss
+++ b/assets/style/custom.scss
@@ -1,4 +1,6 @@
 
-$primary:       #7D61C8 ;
+$input-btn-padding-y:         .15rem;
+$input-btn-padding-x:         .75rem;
 
+$gutter: .5rem;
 @import "bootstrap/scss/bootstrap";
