--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -56,7 +56,7 @@ h6 {
 # Page Title
 --------------------------------------------------------------*/
 .pagetitle {
-  margin-bottom: 10px;
+  margin-bottom: 1px;
 }
 
 .pagetitle h1 {
@@ -234,7 +234,7 @@ h6 {
 
 /* Card */
 .card {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   border: none;
   border-radius: 5px;
   box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
@@ -249,7 +249,7 @@ h6 {
 }
 
 .card-title {
-  padding: 20px 0 15px 0;
+  padding: 5px 0 5px 0;
   font-size: 18px;
   font-weight: 500;
   color: #012970;
@@ -263,7 +263,7 @@ h6 {
 }
 
 .card-body {
-  padding: 0 20px 20px 20px;
+  padding: 10px 10px 10px 10px;
 }
 
 .card-img-overlay {
