--- a/assets/style/custom.scss
+++ b/assets/style/custom.scss
@@ -3,4 +3,8 @@ $input-btn-padding-y:         .15rem;
 $input-btn-padding-x:         .75rem;
 
 $gutter: .5rem;
+$border-radius: 0rem;
+$spacer: 0.3rem;
+$input-font-size : 14px;
+
 @import "bootstrap/scss/bootstrap";
