--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1469,3 +1469,19 @@ label {
 .mx-datepicker {
   width: 100%;
 }
+
+/** Search **/
+.search-area {
+  border-top: 0.1rem solid;
+  border-bottom: 0.1rem solid;
+  padding: 2px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.search-area .search-label {
+  text-align: center;
+  background-color: #f5f5f5;
+  padding: 0.15rem 0;
+  margin: 0 2px;
+}
