--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1485,3 +1485,8 @@ label {
   padding: 0.15rem 0;
   margin: 0 2px;
 }
+
+span.invalid-feedback {
+  height: 16px !important;
+  display:block;
+}
