form validate시 feedback영역 고정

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1486,7 +1486,7 @@ label {
   margin: 0 2px;
 }
 
-/*span.invalid-feedback {
+form  span.invalid-feedback {
   height: 16px !important;
   display:block;
-}*/
+}
