파일 처리 문제

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -8,6 +8,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+/**
+변환 순서 문제로. 확장자를 scss로 처리한다.
+ */
 :root {
   scroll-behavior: smooth;
 }
