1. 상단 알림바 모달

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -1481,3 +1481,13 @@ label {
   padding: 0.15rem 0;
   margin: 0 2px;
 }
+
+.font-red {
+  color: red;
+}
+
+.cntn-area {
+  border:1px solid #ced4da;
+  height:415px;
+  overflow:scroll;
+}
