디자인 적용중

--- a/assets/style/scss/custom.scss
+++ b/assets/style/scss/custom.scss
@@ -1,14 +1,21 @@
-
-$input-btn-padding-y:         .15rem;
-$input-btn-padding-x:         .75rem;
-
-$gutter: .5rem;
-$border-radius: 0rem;
-
-$input-font-size : 14px;
+//
+//$input-btn-padding-y:         .15rem;
+//$input-btn-padding-x:         .75rem;
+//
+//$gutter: .5rem;
+//$border-radius: 0rem;
+//
+//$input-font-size : 14px;
 
 
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
-@import "assets/style/scss/style.scss";
+@import "assets/style/scss/style2.scss";
+@import "assets/style/scss/button.scss";
+@import "assets/style/scss/login.scss";
+@import "assets/style/scss/popup.scss";
+@import "assets/style/scss/grid.scss";
+
+
+//@import "assets/style/scss/style.scss";
