--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -1,4 +1,4 @@
-//공통 레이아웃
+//Top Frame
 #header {
   height: 70px;
 }
@@ -81,16 +81,14 @@
   }
 }
 
+//main
 .main {
-  margin: 80px 0 50px 0;
+  padding: 75px 0 45px 0;
+  width: 100%;
   height: 100%;
   display: flex;
   background: #E8ECF4;
-
-  .btn {
-    font-weight: bold;
-  }
-
+  //Aside
   aside {
     height: 100%;
     margin-right: 10px;
@@ -100,7 +98,8 @@
       width: 100%;
       height: 100%;
     }
-    button{
+
+    button {
       background: 0;
       border: none;
     }
@@ -112,6 +111,7 @@
   background: #007DB6;
   height: 100%;
   font-size: 19px;
+
   :nth-child(2) {
     background: #80c242;
   }
@@ -124,6 +124,7 @@
     align-items: center;
   }
 }
+
 .rotate {
   transition: transform .5s ease;
 }
@@ -131,9 +132,11 @@
 .rotate.collapsed {
   transform: rotate(180deg);
 }
-.menu-area.collapse-in{
+
+.menu-area.collapse-in {
   transition: transform .3s ease-in;
 }
+
 .menu-area {
   width: 195px;
   height: 100%;
@@ -147,10 +150,10 @@
     background-color: #fff;
   }
 
-
   #menu-area.show {
     left: 0;
   }
+
   .main-menu {
     width: 100%;
     height: 100%;
@@ -173,16 +176,21 @@
       justify-content: space-between;
       align-items: center;
       padding: 0 5px 0 0;
-      border: none; border-radius: 0;
+      border: none;
+      border-radius: 0;
     }
-    .accordion-button-one:not(.collapsed){
+
+    .accordion-button-one:not(.collapsed) {
       background: none;
       font-size: 15px;
-      border-bottom: solid 2px #000; color: #333;
+      border-bottom: solid 2px #000;
+      color: #333;
       box-shadow: none;
     }
+
     .sub-menu {
       padding: 0;
+
       &-list {
         padding: 0;
         margin: 0;
@@ -192,9 +200,11 @@
         width: 100%;
         height: 35px;
         font-weight: lighter;
-        font-size: 11px; color: #777;
+        font-size: 11px;
+        color: #777;
 
       }
+
       .btn {
         height: 35px;
         padding: 0 5px;
@@ -203,19 +213,24 @@
         box-shadow: none;
         border: none;
       }
-      .accordion-collapse{padding: 5px}
-      .accordion-item{
-        border: 0;  background: none;
+
+      .accordion-collapse {
+        padding: 5px
+      }
+
+      .accordion-item {
+        border: 0;
+        background: none;
       }
       .accordion-body {
         padding: 0
       }
-      .accordion-button {
-
+      .accordion-button:not(.collapsed){
+        background: #E5F2F8; color: #2E94C3;
+        border-radius: 0;
       }
       .sub-item {
         bottom: 0;
-
       }
     }
   }
@@ -223,17 +238,16 @@
 
 }
 
+//Work Frame
 section {
   width: 100%;
-  min-height: 100%;
   overflow: hidden;
   background: #fff;
   position: relative;
 }
 
 .home-wrap {
-  width: 100%;
-  height: 30px;
+  height: 40px;
   display: flex;
   align-items: center;
   background: #E8ECF4;
@@ -258,7 +272,7 @@ section {
     margin-bottom: 0;
     font-size: 10.5px;
     letter-spacing: 1.5px;
-    padding-left: 0;
+    padding: 0;
     display: flex;
     align-items: center;
 
@@ -329,33 +343,13 @@ section {
   }
 }
 
-.btn-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-
-  .btn-gray-bg {
-    &:last-child {
-      margin-right: 0
-    }
-  }
-
-  .btn-white-bg {
-    &:last-child {
-      margin-right: 0
-    }
-  }
-}
-
 .code-search {
-  width: 1625px;
-  margin: 5px 0 5px 20px;
   height: 50px;
   font-size: 11px;
   font-weight: bold;
   border: solid 1px #DFE2E9;
   display: flex;
+  margin: 10px 20px 20px 20px;
 
   .code-search-form {
     display: flex;
@@ -390,338 +384,7 @@ section {
   }
 }
 
-//공통 contents
-.contents {
-  width: 100%;
-  height: 80%;
-  display: flex;
-  position: absolute;
-}
-
-.txt-wrap {
-  height: 30px;
-  display: flex;
-  font-size: 12px;
-  margin: 0 0 5px 10px;
-
-  h3 {
-    height: 100%;
-    font-size: 12px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    i {
-      margin-right: 5px;
-    }
-  }
-}
-
-.grid {
-  height: 33px;
-  border-top: solid 2px #6B758E;
-  font-size: 11px;
-  background: #F7F7F7;
-  display: flex;
-  font-weight: bold;
-
-  div {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 5px;
-    border: solid 1px #DFE3EC;
-  }
-}
-
-.data-box {
-  width: 100%;
-  height: 300px;
-  color: #999;
-  font-size: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  p {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-//left contents
-.left-contents {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-
-  .grid-wrap {
-    height: 100%;
-    position: relative;
-    padding-left: 10px;
-    .grid{
-      min-width: 70px;
-      overflow: hidden;
-    }
-  }
-
-  .number {
-    width: 100%;
-    font-size: 11px;
-    font-weight: bold;
-    color: #5F6165;
-    display: flex;
-    justify-content: flex-end;
-    position: absolute;
-    bottom: 0;
-    border-top: solid 1px #DFE3EC;
-  }
-}
-
-.bar {
-  display: block;
-  width: 10px;
-  height: 100%;
-  border-radius: 10px;
-  background: #007DB6;
-  color: #007DB6;
-  margin: 0 10px;
-}
-
-//right contents
-.right-contents {
-  max-width: 100%;
-  font-weight: bold;
-  display: flex;
-  flex-direction: column;
-
-  .txt-wrap {
-    margin: 0 0 5px 0;
-  }
-  .btn-white-bg{
-    margin-right: 5px;}
-  form {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    color: #4C5263;
-    overflow: hidden;
-    font-size: 11px;
-    margin-left: 10px;
-
-    .sj-form-field {
-      width: 50%;
-      overflow: hidden;
-      margin-bottom: 5px;
-      padding-left: 5px;
-
-      &:nth-child(5),
-      &:nth-child(6) {
-        width: 100%;
-
-        .inp-field {
-          width: 100%;
-          margin-bottom: 5px;
-        }
-      }
-      div{
-        width: 100%;}
-
-      fieldset {
-        display: flex;
-        width: 100%;
-
-        legend {
-          width: 100px;
-          min-width: 100px;
-          font-size: 11px;
-          align-items: center;
-          display: flex;
-
-          &:before {
-            content: "";
-            width: 3px;
-            height: 3px;
-            background: #5C5C5C;
-            border-radius: 10px;
-            margin-right: 5px;
-          }
-
-          i {
-            height: 10px;
-            padding-left: 2px;
-            color: #0365A9;
-          }
-        }
-
-        div {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        }
-
-        input {
-          width: 100%;
-          height: 25px;
-          border: solid 1px #BCC1D0;
-          margin-right: auto;
-        }
-
-        span {
-          width: 100%;
-          color: red;
-          font-size: 10px;
-        }
-      }
-    }
-  }
-
-  .right-grid {
-    height: 100%;
-    position: relative;
-    border-bottom: solid 1px #DFE3EC;
-    margin-bottom: 10px;
-  }
-}
-
-//one contents
-.one-contents {
-  width: 100%;
-  height: 100%;
-
-  .grid-wrap {
-    height: 90%;
-    width: 100%;
-    padding: 0 10px;
-
-    .data-box {
-      width: 100%;
-      height: 90%;
-      border-bottom: solid 1px #DFE2E9;
-    }
-  }
-}
-
-.pagination {
-  height: 15px;
-  margin: 0;
-  position: absolute;
-  bottom: 10px;
-  right: 0;
-  left: 0;
-
-  .page-item {
-    width: 28px;
-    height: 28px;
-
-    .page-link {
-      font-size: 10px;
-    }
-  }
-}
-
-//2분할 contents (서치 없음)
-.second-contents {
-  display: flex;
-  width: 100%;
-  height: 85%;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-  .left-contents {
-    padding-right: 10px;
-    height: 100%;
-  }
-
-  .right-contents {
-    padding-left: 10px;
-
-    .sj-form-field {
-      width: 100%;
-      overflow: hidden;
-      margin-bottom: 5px;
-
-      .inp-field {
-        &:last-child {
-          width: 670px;
-        }
-
-
-      }
-    }
-
-  }
-}
-
-//3분할 contents
-.split-contents {
-  position: relative;
-  height: 100%;
-}
-
-.split-contents {
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-
-  .data-box {
-    height: 100%;
-  }
-  .one-contents {
-    width: 100%;
-    height: 200px;
-    border-bottom: solid 1px #DFE2E9;
-
-    .txt-wrap {
-      margin-right: 10px;
-    }
-  }
-
-  .left-contents {
-    width: 50%;
-    height: 60%;
-    margin-right: 5px;
-    .grid-wrap{
-      height:100%;
-      border-bottom: solid 1px #DFE2E9;
-      .data-box {
-        height:100%;
-        position: relative;
-      }
-      .page-navigation{
-        position: absolute;
-        bottom: -50px;
-      }
-    }
-
-  }
-
-  .right-contents {
-    width: 50%;
-    height: 100%;
-    margin-left: 5px;
-    right: 0;
-
-    .txt-wrap {
-      margin-bottom: 3px;
-    }
-    .grid-wrap{
-      height: 200px;
-      border-bottom: solid 1px #DFE2E9;
-    }
-
-  }
-}
-
-//footer
+//Status Frame
 footer {
   width: 100%;
   height: 40px;
@@ -768,74 +431,413 @@ footer {
     }
 
   }
-
-
 }
 
-@media (max-width: 992px) {
-  .logo {
-    position: fixed;
+//공통 contents
+.contents {
+  display: flex;
+  margin: 0 20px;
+}
+
+//공통 타이틀
+.txt-wrap {
+  height: 30px;
+  display: flex;
+  font-size: 12px;
+  margin-bottom: 5px;
+
+  h3 {
+    height: 100%;
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    i {
+      margin-right: 5px;
+    }
   }
-  .header-nav {
-    opacity: 0;
+}
+
+//공통 grid
+.grid {
+  height: 33px;
+  border-top: solid 2px #6B758E;
+  font-size: 11px;
+  background: #F7F7F7;
+  display: flex;
+  font-weight: bold;
+
+  div {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 5px;
+    border: solid 1px #DFE3EC;
   }
-  .nav-wrap {
-    opacity: 0
+}
+
+.data-box {
+  width: 100%;
+  height: 300px;
+  color: #999;
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  p {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  .navi-wrap {
-    .btn-bar {
-      opacity: 0;
+}
+
+//form
+form {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  color: #4C5263;
+  overflow: hidden;
+  font-size: 11px;
+  padding-left: 10px;
+
+  fieldset {
+    &:first-child {
+      legend {
+        padding: 0;
+      }
     }
   }
 
-  main {
+  .sj-form-field {
+    width: 100%;
+    display: flex;
+    margin-bottom: 5px;
+
+    fieldset {
+      width: 100%;
+      display: flex;
+      margin-left: 10px;
+
+      div {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+      }
+
+      .inp-field {
+        margin-bottom: 5px;
+      }
+
+      &:first-child {
+        margin: 0;
+      }
+    }
+  }
+
+  legend {
+    width: 100px;
+    min-width: 100px;
+    font-size: 11px;
+    align-items: center;
+    display: flex;
+    padding-left: 20px;
+
+    &:before {
+      content: "";
+      width: 3px;
+      height: 3px;
+      background: #5C5C5C;
+      border-radius: 10px;
+      margin-right: 5px;
+    }
+
+    i {
+      height: 10px;
+      padding-left: 2px;
+      color: #0365A9;
+    }
+  }
+
+  input {
+    width: 100%;
+    height: 25px;
+    border: solid 1px #BCC1D0;
+    margin-right: auto;
+  }
+
+  span {
+    width: 100%;
+    color: red;
+    font-size: 10px;
+  }
+}
+
+//btn
+.btn-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+
+  .btn-gray-bg {
+    &:last-child {
+      margin-right: 0
+    }
+  }
+
+  .btn-white-bg {
+    margin-right: 5px;
+
+    &:last-child {
+      margin-right: 0
+    }
+  }
+}
+
+//bar
+.bar {
+  display: block;
+  width: 10px;
+  border-radius: 10px;
+  background: #007DB6;
+  color: #007DB6;
+  margin: 0 10px;
+}
+
+//pagination
+.pagination {
+  height: 15px;
+  margin: 0;
+  position: absolute;
+  bottom: 10px;
+  right: 0;
+  left: 0;
+
+  .page-item {
+    width: 28px;
+    height: 28px;
+
+    .page-link {
+      font-size: 10px;
+    }
+  }
+}
+
+//left contents
+.left-contents {
+  width: 50%;
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+
+  .grid-wrap {
+    height: 100%;
+    position: relative;
+
+    .grid {
+      min-width: 70px;
+      overflow: hidden;
+    }
+  }
+
+  .number {
+    width: 100%;
+    font-size: 11px;
+    font-weight: bold;
+    color: #5F6165;
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
+    border-top: solid 1px #DFE3EC;
+  }
+}
+
+//right contents
+.right-contents {
+  font-weight: bold;
+  display: flex;
+  flex-shrink: 1;
+  flex-direction: column;
+
+  .right-grid {
+    height: 100%;
+    position: relative;
+    border-bottom: solid 1px #DFE3EC;
+    margin-bottom: 10px;
+  }
+}
+
+
+//one contents
+.one-contents {
+  width: 100%;
+
+  .grid-wrap {
+    height: 90%;
+    width: 100%;
+    padding: 0 10px;
+
+    .data-box {
+      width: 100%;
+      height: 90%;
+      border-bottom: solid 1px #DFE2E9;
+    }
+  }
+}
+
+//2분할 contents (서치 없음)
+.second-contents {
+  display: flex;
+  margin: 0 20px;
+
+  .left-contents {
+    padding-right: 10px;
+    height: 100%;
+  }
+
+  .right-contents {
+    width: 100%;
+    padding-left: 10px;
+
+    .sj-form-field {
+      width: 100%;
+      overflow: hidden;
+      margin-bottom: 5px;
+
+      .inp-field {
+        &:last-child {
+          width: 670px;
+        }
+      }
+    }
+
+  }
+}
+
+//3분할 contents
+.split-contents {
+  position: relative;
+  height: 100%;
+  .contents{
+    height: 450px;
+  }
+}
+
+.split-contents {
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+
+  .data-box {
+    height: 100%;
+  }
+
+  .one-contents {
+    width: 100%;
+    height: 200px;
+    padding:0 10px;
+
+    .txt-wrap {
+      margin: 0 10px ;
+    }
+    .data-box{
+      height: 100px;
+      border-bottom: solid 1px #DFE2E9;
+    }
+  }
+
+  .left-contents {
+    width: 50%;
+    height: 60%;
+    margin-right: 5px;
+
+    .grid-wrap {
+      height: 100%;
+      border-bottom: solid 1px #DFE2E9;
+
+      .data-box {
+        height: 100%;
+        position: relative;
+      }
+      .page-navigation {
+        position: absolute;
+        bottom: -50px;
+      }
+    }
+  }
+
+  .right-contents {
+    width: 50%;
+    height: 100%;
+    margin-left: 5px;
+    right: 0;
+
+    .txt-wrap {
+      margin-bottom: 3px;
+    }
+
+    .grid-wrap {
+      height: 200px;
+      border-bottom: solid 1px #DFE2E9;
+    }
+  }
+}
+
+
+@media (max-width: 1850px) {
+  #header {
+    .logo {
+      position: fixed;
+    }
+
+    .nav-wrap {
+      opacity: 0
+    }
+  }
+  #main {
     white-space: nowrap;
 
     aside {
       overflow: hidden;
     }
 
-    .main-menu {
-      overflow: hidden;
+    .navi {
+      min-width: 100vw;
     }
 
-    section {
-      overflow: hidden;
-      position: sticky;
-    }
+    .code-search {
+      min-width: 100vw;
 
-    .left-contents {
-      min-width: 100%
-    }
-
-    .second-contents,
-    .contents {
-      width: 100%;
-      overflow: hidden;
-
-      .right-contents {
-        width: 100%;
+      label {
+        min-width: 100px;
       }
+    }
 
-      .grid-wrap {
-        max-width: 100%;
-        overflow: hidden;
+    .grid {
+      div {
+        min-width: 75px;
       }
+    }
+  }
+  .sj-form-field {
+    fieldset {
+      min-width: 250px;
     }
   }
 }
 
-@media (max-width: 720px) {
-  .nav-wrap {
-    opacity: 0
-  }
-  .contents {
-    position: sticky;
+
+@media (max-width: 850px) {
+  .left-contents {
     width: 100%;
-
-    .left-contents {
-      width: 100%;
-    }
-
   }
 }
