--- a/assets/style/scss/reset.css
+++ b/assets/style/scss/reset.css
@@ -1,18 +1,15 @@
 @charset "utf-8";
 body{
-  height: 100vh;
   overflow:hidden;
 }
 html,body{
   font-family: 'Nanum Gothic', sans-serif !important;
-  height: 100%;
+  height: 100% !important;
 }
 *{
   margin: 0; padding: 0; box-sizing: border-box;
 }
-.container{
-  height: 100%;
-}
+
 li{list-style: none;}
 a{color: inherit;text-decoration: none}
 a:link,a:visited{text-decoration: none;color: #333}
