--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -241,9 +241,9 @@
 //Work Frame
 section {
   width: 100%;
-  overflow: hidden;
+  height: 100%;
   background: #fff;
-  position: relative;
+  display: flex; flex-direction: column;
 }
 
 .home-wrap {
@@ -435,8 +435,10 @@ footer {
 
 //공통 contents
 .contents {
-  display: flex;
+  height: 100%;
   margin: 0 20px;
+  display: flex;
+
 }
 
 //공통 타이틀
@@ -481,7 +483,7 @@ footer {
 
 .data-box {
   width: 100%;
-  height: 300px;
+  height: 100%;
   color: #999;
   font-size: 10px;
   display: flex;
