--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -1,8 +1,11 @@
-//Top Frame
-#header {
-  height: 70px;
-}
 
+//Top Frame
+div{
+  height: 100%;
+  #header {
+    height: 70px;
+  }
+}
 .navbar {
   width: 100%;
   height: 100%;
@@ -243,7 +246,7 @@ section {
   width: 100%;
   overflow: hidden;
   background: #fff;
-  position: relative;
+  display: flex; flex-direction: column;
 }
 
 .home-wrap {
