--- a/assets/style/scss/custom.scss
+++ b/assets/style/scss/custom.scss
@@ -7,7 +7,7 @@
 //
 //$input-font-size : 14px;
 
-
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
