메뉴갯수 처리 및 화면 해상도 없는 경우 메뉴 사라지는 문제 처리

--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -811,9 +811,9 @@ form {
   #main {
     white-space: nowrap;
 
-    aside {
-      overflow: hidden;
-    }
+    //aside {
+    //  overflow: hidden;
+    //}
 
     .navi {
       min-width: 100vw;
