--- a/assets/style/scss/login.scss
+++ b/assets/style/scss/login.scss
@@ -14,6 +14,7 @@
     width: 100%;
     display: flex; flex-direction: column;
     justify-content: center; align-items: center;
+    margin-bottom: 20px;
     p{
       width: 120px;
       height: 120px;
@@ -34,30 +35,38 @@
 
   .login-layout-form{
     width: 100%;
-    height: 220px; text-align: center;
-    display: flex;align-items: center; justify-content: center;  flex-direction: column;
-    .form-wrap{
-      display: flex;
-      label{
+    display: flex;flex-direction: column;
+    form{
+      display: flex;flex-direction: column;
+    }
+    .form-outline{
+      width: 100%; justify-content: center;
+      display: flex; align-items: center;
+      .search-field{
         display: flex;
-        justify-content: center;align-items: center;
-        margin-right: 50px;
-        font-size: 14px; font-weight: bold;color: #464C5D;
       }
-      .select{
+      label{
+        width: 100px;
+        font-size: 14px; font-weight: bold;color: #464C5D;
+        margin-right: auto;display: flex; align-items: center;
+      }
+      input,
+      select{
         width: 300px;
         height: 35px;
-        margin-left: auto;
         border: solid 1px #999;
         font-size: 11px; color: #999;
+        background: #fff;
       }
+      span{position: absolute;
+        width: 300px;}
     }
   }
   .id-box{
-    width: 434px;
+    width: 440px;
     height: 25px;
     line-height: 25px;
-    display: flex;
+    display: flex; justify-content: flex-start;
     margin-bottom: 5px;
     p{
       color: #999;
