SearchLR 구조 변경 적용

--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -670,7 +670,7 @@ form {
 
 //right contents
 .right-contents {
-  font-weight: bold;
+  //font-weight: bold;
   display: flex;
   flex-shrink: 1;
   flex-direction: column;
