--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -89,7 +89,7 @@ div{
   width: 100%;
   height: 100%;
   display: flex;
-  background: #E8ECF4;
+  background: #e8ecf4;
   //Aside
   aside {
     height: 100%;
@@ -246,9 +246,11 @@ section {
   height: 100%;
   background: #fff;
   display: flex; flex-direction: column;
+  padding-right:10px ;
 }
 
 .home-wrap {
+  width: 110%;
   height: 40px;
   display: flex;
   align-items: center;
@@ -671,6 +673,7 @@ form {
 //right contents
 .right-contents {
   //font-weight: bold;
+  width: 100%;
   display: flex;
   flex-shrink: 1;
   flex-direction: column;
