--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -672,6 +672,7 @@ form {
 //right contents
 .right-contents {
   //font-weight: bold;
+  width: 50%;
   display: flex;
   flex-direction: column;
 
