--- a/assets/style/scss/style2.scss
+++ b/assets/style/scss/style2.scss
@@ -455,12 +455,14 @@ footer {
 //}
 
 //공통 contents
+.router-alive{
+  width: 100%;
+  position: absolute;}
 .contents {
   height: 100%;
   margin: 0 20px;
   display: flex;
   justify-content: space-between;
-  position: absolute;
 }
 .router-tab{
   height: 100%}
