파일명 변경 및 통합

--- a/assets/style/scss/custom.scss
+++ b/assets/style/scss/custom.scss
@@ -14,9 +14,6 @@
 @import "assets/style/scss/login.scss";
 @import "assets/style/scss/popup.scss";
 
-@import "assets/style/scss/style2.scss";
+@import "assets/style/scss/style.scss";
 @import "assets/style/scss/button.scss";
 
-
-
-//@import "assets/style/scss/style.scss";
