--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -441,14 +441,12 @@ footer {
 
 //bar
 .bar {
+  display: block;
   width: 5px;
-  height: 100%;
+  height: auto;
   border-radius: 10px;
   background: #007DB6;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding: 0;
 }
 //.bar::before {
 //  content: "";
@@ -463,7 +461,6 @@ footer {
   height: 100%;
   margin: 0 20px;
   display: flex;
-  justify-content: space-between;
 }
 .router-tab{
   height: 100%}
@@ -674,11 +671,9 @@ form {
 //left contents
 .left-contents {
   display: flex;
-  flex-shrink: 0;
   flex-direction: column;
-  position: relative;
   padding-left: 0;
-
+  flex: auto;
   //.grid-wrap {
   //  height: 100%;
   //  position: relative;
@@ -708,6 +703,7 @@ form {
   display: flex;
   flex-direction: column;
   padding-right: 0;
+  flex: auto;
 
 
   //.right-grid {
