그리드 수정

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -454,9 +454,6 @@ footer {
 //}
 
 //공통 contents
-.router-alive{
-  width: 100%;
-  position: absolute;}
 .contents {
   height: 100%;
   margin: 0 20px;
@@ -672,11 +669,9 @@ form {
 .left-contents {
   display: flex;
   flex-direction: column;
-  padding-left: 0;
-  .SJGrid{
-    .tui-grid-content-area{
-      position: absolute;}
-  }
+  position: relative;
+  padding: 0;
+  margin-right: 10px;
   //.grid-wrap {
   //  height: 100%;
   //  position: relative;
@@ -705,11 +700,9 @@ form {
   //font-weight: bold;
   display: flex;
   flex-direction: column;
-  padding-right: 0;
-  .SJGrid{
-    .tui-grid-content-area{
-      position: absolute;}
-  }
+  position: relative;
+  padding: 0;
+  margin-left: 10px;
 
 
   //.right-grid {
