--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -440,14 +440,14 @@ footer {
 }
 
 //bar
-.bar {
-  display: block;
-  width: 5px;
-  height: auto;
-  border-radius: 10px;
-  background: #007DB6;
-  padding: 0;
-}
+//.bar {
+//  display: block;
+//  width: 5px;
+//  height: auto;
+//  border-radius: 10px;
+//  background: #007DB6;
+//  padding: 0;
+//}
 //.bar::before {
 //  content: "";
 //  flex-grow: 1;
