--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -25,7 +25,7 @@ div{
     display: flex;
 
     .search-bar {
-      margin-right: 50px;
+      margin-right: 60px;
       display: flex;
       align-items: center;
 
@@ -59,11 +59,9 @@ div{
         align-items: center;
         margin-right: 18px;
         color: #3B4158;
-
         &:last-child {
           margin-right: 0;
         }
-
         p {
           position: absolute;
           width: 19px;
@@ -77,6 +75,22 @@ div{
           justify-content: center;
           align-items: center;
           border-radius: 10px;
+        }
+      }
+      .nav-item{
+        width: 80px;
+        font-size: 14px;
+
+      }
+      .dropdown-menu{
+        font-size: 11px;
+        min-width: 120px;
+        position: absolute; inset: 10px 5px auto auto; margin: 0px; transform: translate(5px, 45px);
+        .dropdown-item{
+            img{
+            width: 15px;
+            height: 15px;margin-right: 10px;
+            }
         }
       }
     }
