--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -409,7 +409,8 @@ footer {
   width: 100%;
   height: 40px;
   background: #6b758e;
-  padding-right: 20px;
+  padding: 20px;
+  .ft-title{color: #fff;}
 
   .ft-txt {
     height: 100%;
@@ -418,6 +419,7 @@ footer {
     font-weight: bold;
     display: flex;
     align-items: center;
+    margin-left: auto;
 
     p {
       height: 100%;
@@ -550,7 +552,6 @@ form {
     padding: 0;
     height: 25px;
   }
-
   .sj-form-field {
     width: 100%;
     display: flex;
@@ -564,13 +565,12 @@ form {
         width: 15px;
         height: 15px;
       }
-      textarea,
-      .field-area {
+      .mx-datepicker,
+      textarea,.field-area {
         display: flex;
         flex-direction: column;
         width: 100%;
       }
-
       .inp-field {
         margin-bottom: 5px;
       }
@@ -604,12 +604,12 @@ form {
       color: #0365A9;
     }
   }
-
-  input , select {
+  input,select {
     width: 100%;
     height: 25px;
     border: solid 1px #BCC1D0;
     margin-right: auto;
+    border-radius: 0;
   }
   .check-box{
     input{
@@ -634,7 +634,11 @@ form {
     font-size: 10px;
   }
 }
-
+.mx-input-wrapper{
+  input {
+    width: 100%;
+  }
+}
 //btn
 .btn-bar {
   display: flex;
@@ -871,6 +875,10 @@ form {
   .sj-form-field {
     fieldset {
       min-width: 250px;
+    }
+    .field-area{
+      div{
+        display: flex;flex-direction: column;}
     }
   }
   .bar{
