--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -410,13 +410,13 @@ footer {
   height: 40px;
   background: #6b758e;
   padding: 20px;
-  .ft-title{color: #fff;}
-
-  .ft-txt {
-    height: 100%;
+  .ft-title,.ft-txt{
     font-size: 12px;
     color: #fff;
     font-weight: bold;
+  }
+  .ft-txt {
+    height: 100%;
     display: flex;
     align-items: center;
     margin-left: auto;
@@ -635,8 +635,11 @@ form {
   }
 }
 .mx-input-wrapper{
-  input {
+  .mx-input {
     width: 100%;
+    border-radius: 0;
+    height: 25px;
+    border: 1px solid #bcc1d0;
   }
 }
 //btn
