체크박스 수정, 반응형 버튼 위치 조정

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -87,10 +87,10 @@ div{
         min-width: 120px;
         position: absolute; inset: 10px 5px auto auto; margin: 0px; transform: translate(5px, 45px);
         .dropdown-item{
-            img{
+          img{
             width: 15px;
             height: 15px;margin-right: 10px;
-            }
+          }
         }
       }
     }
@@ -331,7 +331,7 @@ section {
     font-size: 11px;
     display: flex;
     align-self: center;
-    height: 20px;
+
 
     &-icon {
       height: 100%;
@@ -561,7 +561,6 @@ form {
       width: 100%;
       display: flex;
       margin-left: 10px;
-
       .mx-datepicker,
       textarea,.field-area {
         display: flex;
@@ -638,6 +637,38 @@ form {
     height: 25px;
     border: 1px solid #bcc1d0;
   }
+}
+//checkbox 스타일
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  position: relative;
+  width: 13px;
+  height: 13px;
+  cursor: pointer;
+  outline: none !important;
+  background: #fbfbfb;
+}
+
+input[type="checkbox"]::before {
+  content: "\2714";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  overflow: hidden;
+  transform: scale(0) translate(-50%, -50%);
+  line-height: 1;
+}
+input[type="checkbox"]:checked {
+  background-color: #0d6efd;
+  color: white;
+  border:none;
+}
+input[type="checkbox"]:checked::before {
+  border-radius: 2px;
+  transform: scale(1) translate(-50%, -50%)
+}
+form .check-box input{
+  border: 1px solid #bcc1d0;
 }
 //btn
 .btn-bar {
@@ -860,10 +891,10 @@ form {
     //aside {
     //  overflow: hidden;
     //}
-    .code-search {
-      min-width: 100vw;
+    .search {
+      min-width: 100%;
       label {
-        min-width: 100px;
+        //min-width: 100px;
       }
     }
     //.grid {
@@ -883,22 +914,17 @@ form {
   }
   .bar{
     right: 0;}
-}
-@media (max-width: 1600px) {
-  #main{ width: 100%;
-    .navi-wrap{
-      width: 100%;
-      .btn-bar{
-        width: 100%;
-        justify-content: flex-start;
-      }
-    }
+  .ck.ck-toolbar>.ck-toolbar__items{
+    width: 100%;
   }
-
 }
+
 
 
 @media (max-width: 850px) {
+  .navi-wrap{
+    .btn-bar{display: none;}
+  }
   .left-contents {
     width: 100%;
   }
