일자검색 폰트/사이즈 통일

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -637,6 +637,8 @@ form {
     border-radius: 0;
     height: 25px;
     border: 1px solid #bcc1d0;
+    font-family: inherit;
+    font-size: inherit;
   }
 }
 //checkbox 스타일
