--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -85,7 +85,7 @@ div{
       .dropdown-menu{
         font-size: 11px;
         min-width: 120px;
-        position: absolute; inset: 10px 5px auto auto; margin: 0px; transform: translate(5px, 45px);
+        position: absolute; inset: 10px 5px auto auto; margin: 0; transform: translate(5px, 45px);
         .dropdown-item{
           img{
             width: 15px;
@@ -650,6 +650,7 @@ input[type="checkbox"] {
   cursor: pointer;
   outline: none !important;
   background: #fbfbfb;
+  border-radius: 2px;
 }
 
 input[type="checkbox"]::before {
@@ -670,6 +671,7 @@ input[type="checkbox"]:checked::before {
   border-radius: 2px;
   transform: scale(1) translate(-50%, -50%)
 }
+.tui-grid-cell-has-input input,
 form .check-box input{
   border: 1px solid #bcc1d0;
 }
