--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -352,6 +352,7 @@ section {
   font-weight: bold;
   border: solid 1px #DFE2E9;
   display: flex;
+  flex-wrap: wrap;
   margin: 10px 20px 20px 20px;
 
   .search-field {
