--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -366,7 +366,7 @@ section {
     display: flex;
     align-items: center;
     margin-right: 10px;
-    min-width: 60px;
+    min-width: 70px;
 
     &::before {
       @include size-set(3px,3px);
@@ -520,7 +520,6 @@ footer {
 //form
 form {
   width: 100%;
-  display: flex;
   flex-wrap: wrap;
   color: #4C5263;
   overflow: hidden;
@@ -865,12 +864,14 @@ form .check-box input{
     //}
     .search {
       min-width: 100%;
+      overflow: hidden;
+      flex-wrap: nowrap;
       input,select{
         width: 100%;
         min-width: 100px;
       }
       .search-field{
-        //width: 100%
+        min-width: 150px;
       }
       label {
         //min-width: 100px;
