--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -347,26 +347,30 @@ section {
 }
 
 .search {
-  height: 60px;
+  height: 100%;
   font-size: 11px;
   font-weight: bold;
   border: solid 1px #DFE2E9;
   display: flex;
   flex-wrap: wrap;
-  margin: 10px 20px 20px 20px;
+  margin: 0 20px;
+  padding: 10px 0;
 
   .search-field {
     display: flex;
     align-items: center;
     color: #464C5D;
-    margin: 0 20px;
+    margin: 0 10px;
+    width: 290px;
+    div{
+      width: 100%;}
   }
 
   label {
     display: flex;
     align-items: center;
     margin-right: 10px;
-    min-width: 70px;
+    min-width: 80px;
 
     &::before {
       @include size-set(3px,3px);
@@ -380,7 +384,7 @@ section {
 
   input,
   select {
-    @include size-set(200px,25px);
+    @include size-set(100%,25px);
     border: solid 1px #BCC1D0;
   }
 
