--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -360,7 +360,7 @@ section {
     display: flex;
     align-items: center;
     color: #464C5D;
-    margin: 0 10px;
+    margin: 2px 10px;
     width: 290px;
     div{
       width: 100%;}
