search모달 오류수정

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -362,8 +362,9 @@ section {
     color: #464C5D;
     margin: 0 10px 5px 10px;
     width: 300px;
-    div{
-      width: 100%;}
+    //div{
+    //  width: 100%;
+    //}
   }
 
   label {
