--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -360,8 +360,8 @@ section {
     display: flex;
     align-items: center;
     color: #464C5D;
-    margin: 0 10px 5px 10px;
-    width: 300px;
+    padding: 5px 15px;
+    width: 315px;
     //div{
     //  width: 100%;
     //}
@@ -370,8 +370,7 @@ section {
   label {
     display: flex;
     align-items: center;
-    margin-right: 10px;
-    min-width: 90px;
+    min-width: 85px;
 
     &::before {
       @include size-set(3px,3px);
