--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -167,11 +167,25 @@ div{
   .main-menu {
     @include size-set(100%,100%);
     padding: 0;
-    overflow: hidden;
     margin: 0;
+    overflow: scroll;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #2E94C3;
+      border-radius: 10px;
+      background-clip: padding-box;
+      border: 2px solid transparent;
+    }
+    &::-webkit-scrollbar-track {
+      background: #fff;
+      border-radius: 10px;
+    }
 
     &-item {
-      margin: 0 10px;
+      margin-left: 10px;
       border-bottom: solid 1px #E9E8E7;
       padding: 10px 0;
     }
@@ -183,7 +197,7 @@ div{
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 5px 0 0;
+      padding: 0;
       border: none;
       border-radius: 0;
     }
