--- a/assets/style/scss/button.scss
+++ b/assets/style/scss/button.scss
@@ -58,3 +58,29 @@
   color: #BCC1D0;
   font-size: 13px;
 }
+
+.btn-pop-sm{
+  width: 60px;
+  height: 50px;
+  background: #fff;
+  border: solid 1px #bcc1d0;
+  border-radius: 3px;
+}
+.btn-pop-bg{
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: 500;
+  border: solid 1px #bcc1d0;
+  background: #0365A9;
+  color: #fff;
+}
+.btn-pop-none{
+  background: #fff;
+  border: solid 1px #bcc1d0;
+  border-radius: 3px;
+  width: 100px;
+  height:100%;
+  font-size: 30px;
+  margin: 10px 0;
+}
+
