search 반응형 수정

--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -881,9 +881,8 @@ form .check-box input{
     //  overflow: hidden;
     //}
     .search {
-      min-width: 100%;
+      height: 92px;
       overflow: hidden;
-      flex-wrap: nowrap;
       input,select{
         width: 100%;
         min-width: 100px;
