--- a/assets/style/scss/style.scss
+++ b/assets/style/scss/style.scss
@@ -367,7 +367,7 @@ section {
   border: solid 1px #DFE2E9;
   display: flex;
   flex-wrap: wrap;
-  margin: 0 20px;
+  margin: 0 20px 10px 20px;
   padding: 10px;
 
   .search-field {
