--- a/assets/style/scss/login.scss
+++ b/assets/style/scss/login.scss
@@ -1,83 +1,108 @@
-
 .login-layer-wrap{
   height: 100%;
   display: flex; justify-content: center; align-items: center;
 }
-.login-layout{
-  width: 500px;
-  height: 650px;
-  background: rgba(255, 255, 255, 0.8);
-  display: flex; flex-direction: column;
-  justify-content: center; align-items: center;
-
-  .login-layout-title{
-    width: 100%;
-    display: flex; flex-direction: column;
-    justify-content: center; align-items: center;
-    margin-bottom: 20px;
-    p{
-      width: 120px;
-      height: 120px;
-      background: #10597E;
-      display: flex;
-      justify-content: center;align-items: center;
-      font-size: 60px; color: #fff;
-      border-radius: 100px;
-    }
-    h2{
-      font-size: 60px;
-      font-weight: bold;
-      color: #10597E;
-      letter-spacing: 0.05em;
-    }
-
+.login-layout-title{
+  margin-bottom:5px;
+  justify-content: start;
+  width: 1200px;
+  color: #fff;
+  font-weight: 600;
+  p{
+    margin: 0;
   }
-
+}
+.login-layout{
+  width: 1200px;
+  height: 650px;
+  background:#fff;
+  border-radius: 10px;
+  box-shadow: 5px 10px 6px 0 rgba(0, 0, 0, 0.2);
+  .logo{
+    width: 285px;
+    height: 130px;
+  }
+  .login-left{
+    width: 50%;
+    background: #E5F2F8;
+    border-radius: 10px 0 0 10px;
+    position: relative;
+    img{
+      width: 470px;
+      height: 405px;
+      position: absolute;
+      right: 40px;
+      bottom: 25px;
+    }
+  }
+  .login-right{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    img{margin: 40px 0;}
+  }
   .login-layout-form{
-    width: 100%;
-    display: flex;flex-direction: column;
     form{
-      display: flex;flex-direction: column;
+      display: flex;
     }
     .form-outline{
       width: 100%; justify-content: center;
-      display: flex; align-items: center;
+      display: flex;
+      position: relative;
+      margin-bottom: 20px;
+      i{
+        position: absolute;
+        left: 14%;
+        top: 7%;
+      }
       .search-field{
         display: flex;
+        flex-direction: column;
       }
       label{
         width: 100px;
-        font-size: 14px; font-weight: bold;color: #464C5D;
-        margin-right: auto;display: flex; align-items: center;
+        font-size: 14px;
+        font-weight: bold;color: #464C5D;
+        margin-left: 18px;
       }
       input,
       select{
-        width: 300px;
-        height: 35px;
+        width: 440px;
+        height: 50px;
         border: solid 1px #999;
+        border-radius: 5px;
         font-size: 11px; color: #999;
         background: #fff;
       }
-      span{position: absolute;
-        width: 300px;}
+      span{
+        position: absolute;
+        width: 300px;
+      }
     }
   }
   .id-box{
     width: 440px;
     height: 25px;
-    line-height: 25px;
-    display: flex; justify-content: flex-start;
+    display: flex; align-items: center;
     margin-bottom: 5px;
     p{
       color: #999;
       font-size: 12px; font-weight: bold;
-      margin-right: 20px;
+      margin: 0 20px 0 0;
+      cursor: pointer;
     }
   }
   .btn-blue-bg{
     width: 440px;
     height: 55px;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 18px;
+    font-weight: 600;
+    margin: 0;
+  }
+  .btn-blue-bg:hover{
+    background: #03548F;
+    color: #fff;
   }
 }
